--- a/MockUp/MockUp.tex
+++ b/MockUp/MockUp.tex
@@ -40,8 +40,8 @@
 \setbeamercovered{transparent}
 %\setbeameroption{show notes on second screen=right}
 
-\title{Internet-Technologien SS2014}
-\author{Gruppe bluemoep}
+\title{LocalTwitter}
+\author{Gruppe bluemoep\\Internet-Technologien SS2014}
 \date{13. Mai 2014}
  
 \begin{document}
