--- a/MockUp/MockUp.tex
+++ b/MockUp/MockUp.tex
@@ -42,13 +42,13 @@
 
 \title{LocalTwitter}
 \author{Gruppe bluemoep\\Internet-Technologien SS2014}
-\date{13. Mai 2014}
+\date{01. Juni 2014}
  
 \begin{document}
 \frame{\maketitle}
 %\frame{\tableofcontents[subsections,hideothersubsections]}
  
-\section{Design / MockUp}
+\section{Design}
 \subsection{Desktop}
 \begin{frame}
 	\frametitle{Desktop}
